# Boring_work

./: .gitignore  HOWTO.md  README.md  run.py  stop.ps1  stop.py
auth-client/: README.md  pyproject.toml
auth-client/src/auth_client/: __init__.py  config.py  exceptions.py  middleware.py  models.py  verifier.py
backend/: .env.example  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py
backend/app/core/: __init__.py  config.py  exceptions.py  keycloak_client.py  security.py
backend/app/db/: __init__.py  base.py
backend/app/db/migrations/: 001_create_users.sql
backend/app/middleware/: __init__.py  auth_middleware.py
backend/app/models/: __init__.py  schemas.py  user.py
backend/app/repositories/: __init__.py  base.py  sqlite_user_repository.py
backend/app/services/: __init__.py  auth_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/AuthForm/: LoginForm.tsx  RegisterForm.tsx  index.ts
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx
frontend/src/router/: index.tsx
frontend/src/services/: auth.api.ts
keycloak/: docker-compose.yml  realm-export.json
